# repro

./: .gitignore  LICENSE  README.md  paper.bib  paper.md  pyproject.toml
.github/workflows/: draft-pdf.yml  repro-check.yml
data/: breaking_changes.json  cve_snapshot.json  data_version.json  pipeline_requirements.json
repro/: __init__.py  bundle.py  cli.py  diff.py  explain.py  feasibility.py  init.py  lockfile.py  network.py  restore.py  score.py  security.py  share.py  sign.py  snapshot.py  update.py  update_data.py  verify.py  version_util.py
repro/detectors/: __init__.py  _util.py  conda.py  containers.py  environment.py  galaxy.py  gpu.py  languages.py  packages.py  pipeline.py  refs.py  system.py  tools.py  virtualenv.py
tests/: test_bundle.py  test_diff.py  test_explain.py  test_feasibility.py  test_lockfile.py  test_network.py  test_restore.py  test_score.py  test_security.py  test_snapshot.py  test_update.py  test_update_data.py  test_verify.py
