[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repro-lock"
version = "0.1.0"
description = "Universal pipeline reproducibility tool for computational science"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "rich>=13.0.0",
    "typer>=0.9.0",
    "requests>=2.28.0",
]

[project.scripts]
repro = "repro.cli:app"

[tool.setuptools.packages.find]
include = ["repro*"]
